--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.benjicode.benjlibrary">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -13,7 +12,7 @@
         android:roundIcon="@mipmap/ic_logo_pinterest_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".webview.webViewActivity"></activity>
+        <activity android:name=".webview.webViewActivity"/>
         <activity
             android:name=".books_activities.favoriteBooksActivity"
             android:label="@string/favoriteBookDetails" />
@@ -32,7 +31,8 @@
         <activity
             android:name=".books_activities.allBooksActivity"
             android:label="@string/allbooks" />
-        <activity android:name=".main.MainActivity" >
+        <activity android:name=".main.MainActivity"
+            android:exported="true">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
